// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WidgetBox component should mount the component. The component must include Header, Body and Footer 1`] = `
<WidgetBox
  className="LT-WidgetBox-Container"
>
  <styled.div
    className="LT-WidgetBox-Container"
  >
    <div
      className="LT-WidgetBox-Container sc-htpNat kwWgIV"
    >
      <WidgetBoxHeader
        className="WidgetBoxHeader-Container"
        height={50}
      >
        <StyledHeaderContainer
          className="WidgetBoxHeader-Container"
          height={50}
        >
          <div
            className="WidgetBoxHeader-Container sc-bdVaJa dFfQGU"
            height={50}
          >
            <div>
              Header Child
            </div>
          </div>
        </StyledHeaderContainer>
      </WidgetBoxHeader>
      <WidgetBoxBody
        className="WidgetBoxBody-Container"
      >
        <StyledBodyContainer
          className="WidgetBoxBody-Container"
        >
          <div
            className="WidgetBoxBody-Container sc-bwzfXH bQmfDh"
          >
            <span>
              Child WidgetBox Body
            </span>
          </div>
        </StyledBodyContainer>
      </WidgetBoxBody>
      <WidgetBoxFooter
        className="WidgetBoxFooter-Container"
        height={50}
      >
        <StyledFlexFooter
          className="WidgetBoxFooter-Container"
        >
          <div
            className="WidgetBoxFooter-Container sc-bxivhb hVXoeT"
          >
            <span>
              I am a footer
            </span>
          </div>
        </StyledFlexFooter>
      </WidgetBoxFooter>
    </div>
  </styled.div>
</WidgetBox>
`;

exports[`WidgetBox component should render with custom props 1`] = `
<styled.div
  className="LT-WidgetBox-Container"
>
  <WidgetBoxHeader
    className="WidgetBoxHeader-Container"
    height={50}
  >
    <div>
      Header Child
    </div>
  </WidgetBoxHeader>
  <WidgetBoxBody
    className="WidgetBoxBody-Container"
  >
    <span>
      Child WidgetBox Body
    </span>
  </WidgetBoxBody>
</styled.div>
`;

exports[`WidgetBox component should render with no props 1`] = `
<styled.div
  className="LT-WidgetBox-Container"
/>
`;
